--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -146,6 +146,7 @@ body {
     color: #000;
     text-decoration: none;
     padding: 20px 20px;
+    margin-bottom: 4px;
     margin-right: 10px;
     background-color: rgba(41, 54, 81, 0.07);
     -webkit-transition: all 0.3s ease-out 0s;
